Add support for Redis services in `cli` and `connection-info` commands

--- a/mypy.ini
+++ b/mypy.ini
@@ -54,6 +54,9 @@ ignore_errors = True
 [mypy-aiven.client.connection_info.pg]
 ignore_errors = True
 
+[mypy-aiven.client.connection_info.redis]
+ignore_errors = True
+
 [mypy-aiven.client.pretty]
 ignore_errors = True
 
