--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,71 @@
 # verbose regular expressions by Black.  Use [ ] to denote a significant space
 # character.
 
+[build-system]
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
+
+[project]
+name="aiven-client"
+authors = [
+  { name="Aiven", email="support@aiven.io" },
+]
+description="Aiven.io client library / command-line client"
+readme = "README.rst"
+requires-python = ">=3.7"
+classifiers=[
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+]
+license = { text = "Apache License 2.0" }
+dynamic = ["version"]
+dependencies = [
+    'requests>=2.2.1; sys_platform == "linux"',
+    'requests>=2.9.1; sys_platform != "linux"',
+    "certifi>=2015.11.20.1",
+]
+[project.optional-dependencies]
+dev = [
+    # Lock black to the same major version used in downstream build environments
+    "black==21.6b0",
+    "flake8",
+    # Lock mypy to the same major version used in downstream build environments
+    "mypy>=0.931,<1.0",
+    # Lock types-requests to the same major version used in downstream build environments
+    "types-requests>=2.26.1,<3.0",
+    # Lock pylint to the same major version used in downstream build environments
+    "pylint>=2.12.2,<3.0",
+    "pytest",
+    # Lock isort to the same major version used in downstream build environments
+    "isort>=5.10.1,<6.0",
+    # To prevent black from breaking (https://github.com/psf/black/issues/2964, https://github.com/psf/black/pull/2966)
+    "click < 8.1.0",
+]
+
+
+[project.urls]
+"Homepage" = "https://github.com/aiven/aiven-client"
+"Bug Tracker" = "https://github.com/aiven/aiven-client/issues"
+
+[project.scripts]
+avn = "aiven.client.__main__:main"
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build]
+include = [
+  "aiven/client/py.typed",
+]
+
+[tool.hatch.build.hooks.vcs]
+version-file = "aiven/client/version.py"
+
 [tool.black]
 line-length = 125
 target-version = ['py37', 'py38', 'py39']  # 'py310' is not yet available on Fedora 34
